ros2_ws/log/build_2025-03-10_19-42-42/object_detection_package/stderr.log
  File "/home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/install/object_detection_package/lib/python3.12/site-packages/object_detection_package/yolo_detection.py", line 124
    msg.dis = dis:.2f
                   ^
SyntaxError: invalid decimal literal

